capitulo 3 memoria empezado

--- a/LatexTFG/Capitulos/02Capitulo2.tex
+++ b/LatexTFG/Capitulos/02Capitulo2.tex
@@ -252,6 +252,9 @@ Entre sus principales características, cabe destacar als siguientes:
   \item Marcadores de medidas, señaladores y temporizadores.
 \end{itemize}
 
+\figura{Vectorial/saleae}{width=1\textwidth}{fig:saleae}
+{Software multiplataforma proporcionado por Saleae}
+
 %\medskip
 
 %Y también ponemos el acrónimo \ac{CVS} para que no cruja.
