--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -136,6 +136,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \include{Capitulos/01Capitulo1}
 \include{Capitulos/02Capitulo2}
+\include{Capitulos/03Capitulo3}
 %\include{...}
 %\include{...}
 %\include{...}
