avances en capitulo 3

--- a/LatexTFG/Capitulos/02Capitulo2.tex
+++ b/LatexTFG/Capitulos/02Capitulo2.tex
@@ -238,7 +238,7 @@ Se ha utilizado un analizador lógico, en este caso Saleae, con motivos de depura
 
 La idea de funcionamiento de este dispositivo es muy sencilla. Cuenta con 8 canales que actuan como analizadores lógicos, por lo que basta con conectar cada analizador al canal que se desee analizar. 
 
-Una vez conectado cada canal, entra en juego el software que proporciona el propio Saleae, que en este caso es multiplataforma \footnote{software disponible en \href{https://www.saleae.com/downloads}{https://www.saleae.com/downloads}}. Tras descargarlo e instalarlo bastará con conectar el analizador lógico por usb y configurarlo para comenzar a analizar cada una de las señales.
+Una vez conectado cada canal, entra en juego el software que proporciona el propio Saleae, que en este caso es multiplataforma \footnote{Software disponible en \href{https://www.saleae.com/downloads}{https://www.saleae.com/downloads}}. Tras descargarlo e instalarlo bastará con conectar el analizador lógico por usb y configurarlo para comenzar a analizar cada una de las señales.
 
 Entre sus principales características, cabe destacar als siguientes:
 
