--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -137,6 +137,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 \include{Capitulos/01Capitulo1}
 \include{Capitulos/02Capitulo2}
 \include{Capitulos/03Capitulo3}
+\include{Capitulos/04Capitulo4}
 %\include{...}
 %\include{...}
 %\include{...}
