--- a/LatexTFG/Capitulos/03Capitulo3.tex
+++ b/LatexTFG/Capitulos/03Capitulo3.tex
@@ -248,12 +248,16 @@ El software más destacado que se ejecuta en la BBB es el siguiente:
 \item Programa muy sencillo desarrollado en Python, y denominado \texttt{BTConnection.py} y encargado de la recepción y envio de información a otros dispositivos.
 \end{itemize}
 
-La relación de este ecosistema es bastante simple. El programa principal \texttt{medcape.c}, el cual está programado para ejecutarse según enciende la BBB, es el encargado de realizar las inicializaciones pertinentes para que funcione el intercambio de información, de mapear ciertas regiones de memoria, de ejecutar el binario principal\footnote{Código ensamblador compilado que ejecuta el PRU, concretamente el fichero \texttt{PRUADC.p}}, así como de capturar y generar interrupciones hacia el código que ejecuta el PRU. Consta de un hilo que es el encargado de realizar y capturar las interrupciones. Previamente a que este hilo entre en modo de espera, manda una interrupción al código ensamblador indicando que se encuentra a la espera.
-La interrupción se captura en el código ensamblador y se realiza el proceso de recopilación de las muestras. 
+\figura{Vectorial/pru}{width=0.8\textwidth}{fig:pru}%
+{Bancos de memoria del PRU}
 
-Cuando este proceso concluye, se manda una interrupción desde el código ensamblador al hilo del programa C que se encontraba en espera de capturar un evento concreto. La ejecución continua con una llamada al programa en C \texttt{mem2file.c}, encargado de acceder a las regiones de memoria de la BBB en la que el código ensamblador ha guardado las muestras, y guardarlas en un fichero (generalmente con extensión \texttt{.data}).
+La relación de este ecosistema es bastante simple. El programa principal \texttt{medcape.c}, el cual está programado para ejecutarse según enciende la BBB, es el encargado de realizar las inicializaciones pertinentes para que funcione el intercambio de información, de mapear ciertas regiones de memoria, de ejecutar el binario principal\footnote{Código ensamblador compilado que ejecuta el PRU, concretamente el fichero \texttt{PRUADC.p}}, así como de capturar y generar interrupciones hacia el código que ejecuta el PRU. De forma paralela a la ejecución del programa en C, se ejecuta el programa en ensamblador ya que se da la orden de ejecutar el binario desde el propio programa en C. 
 
-Es en este momento cuando entra en juego el programa desarrollado en Python, que accede a la información del fichero y gracias a un mecanismo de tuberías, el cual permite la sincronización y comunicación con otros procesos, es capaz de enviar esta información a otros dispositivos, en nuestro caso concreto, se envía a un dispositivo móvil con sistema operativo Android como veremos con más detalle más adelante.
+El programa en C consta de un hilo que es el encargado de realizar las interacciones pertinentes con el código que se ejecuta en el PRU. Este hilo entra en modo de espera indefinido hasta que reciba una interrupción por parte del código ejecutandose en el PRU indicando que las muestras estan listas y guardadas en el banco de memoria del PRU (Se ilustra más información sobre estos bancos de memoria en la [Fig \ref{fig:pru}]).
+
+Cuando la recopilación del paquete de muestras está lista y almacenada en el banco de memoria del PRU, se manda una interrupción desde el código ensamblador al programa C que se encontraba en espera de capturar un evento concreto. La ejecución continua con una llamada al programa en C \texttt{mem2file.c}, encargado de acceder a las regiones concretas del banco de memoria del PRU en la que el código ensamblador ha guardado las muestras, y guardarlas en un fichero (generalmente con extensión \texttt{.data}). Además de guardarse en este fichero, el paquete de muestras es enviado por una tubería de la que ahora hablaremos.
+
+Es en este momento cuando entra en juego el programa desarrollado en Python, que accede a la información de la tubería, la cual permite la sincronización y comunicación con otros procesos. El programa Python es capaz de enviar esta información a otros dispositivos, en nuestro caso concreto, se envía a un dispositivo móvil con sistema operativo Android como veremos con más detalle más adelante.
 
 Una vez es asimilado el modo de funcionamiento del ecosistema, aunque sólo sea de forma intuitiva, es posible entrar en detalles técnicos más concretos y complejos, ya que es posible comprender el contexto del ecosistema software.
 
@@ -324,7 +328,7 @@ Esta información se refleja en forma de código en las figuras [Fig \ref{fig:loop
 %-------------------------------------------------------------------
 \label{cap3:sec:guardado}
 
-Según se van procesando las muestras, es necesario almacenarlas en algun sitio, para luego poder acceder a ellas desde el programa en C, del que se habla en la sección \ref{cap3:sec:lectura} (que a su vez vuelve a transmitir la información a otras vías). Es en este caso cuando entran en juego los bancos de memoria de la BBB, en la que se almacenan de forma temporal todas las muestras que se recogen.
+Según se van procesando las muestras, es necesario almacenarlas en algun sitio, para luego poder acceder a ellas desde el programa en C, del que se habla en la sección \ref{cap3:sec:lectura} (que a su vez vuelve a transmitir la información a otras vías). Es en este caso cuando entran en juego los bancos de memoria del PRU, en la que se almacenan de forma temporal todas las muestras que se recogen.
 
 Este proceso de guardado de muestras en memoria se realiza en ensamblador. Para guardar la información de una muestra completa, se almacena la información almacenada en cada uno de los registros indicados en la seccion \ref{cap3:sec:comunicacion}. Es decir, una vez todos estos registros están rellenos con la información de las muestras, el siguiente paso es el almacenamiento en memoria de cada uno de estos registros, que una vez guardados en posiciones de memoria consecutivas, reflejan el contenido de una muestra completa. 
 
@@ -348,13 +352,13 @@ Todo este proceso se refleja en el código ensamblador, concretamente en la funci
 %-------------------------------------------------------------------
 \label{cap3:sec:lectura}
 
-Como ya se adelantaba en la sección \ref{cap3:sec:guardado}, se ha desarrollado un programa en C encargado de leer la información de las muestras almacenadas en el banco de memoria de la BBB, para posteriormente guardarla en un fichero (con extensión \texttt{.data}) \footnote{Este fichero especial está limitado por software a un tamaño máximo de 50MB}. Este programa en C está desarrollado a raíz de un ejemplo que se muestra en el cápitulo 13 del libro Exploring BeagleBone \citep{exploringBBB} y tanto ampliado como adaptado para su correcto funcionamiento en el presente proyecto.
+Como ya se adelantaba en la sección \ref{cap3:sec:guardado}, se ha desarrollado un programa en C encargado de leer la información de las muestras almacenadas en el banco de memoria del PRU, para posteriormente guardarla en un fichero (con extensión \texttt{.data}) \footnote{Este fichero binario está limitado por software a un tamaño máximo de 50MB}. Este programa en C está desarrollado a raíz de un ejemplo que se muestra en el cápitulo 13 del libro Exploring BeagleBone \citep{exploringBBB} y tanto ampliado como adaptado para su correcto funcionamiento en el presente proyecto.
 
-Inicialmente, este programa crea el fichero en el que se guardaran los datos de las muestras. Accede al espacio de memoria de la BBB en la que se almacenan las muestras \footnote{Las muestras se almacenan por grupos de 100}. Es necesario asegurar que cada grupo de muestras contiene la información correcta y precisa, y para ello tras cada grupo de muestras se escriben dos bytes concretos, como si de un sello se tratase a modo de asegurar que los datos recibidos no sean corruptos o haya pérdidas. Concretamente tras el espacio exacto que requiere un grupo de muestras, se escriben a continuación los bytes \texttt{FF}.
+Inicialmente, este programa crea el fichero en el que se guardarán los datos de las muestras. Accede al espacio de memoria del banco del PRU en la que se almacenan las muestras \footnote{Las muestras se almacenan por grupos de 100}. Es necesario asegurar que cada grupo de muestras contiene la información correcta y precisa, y para ello tras cada grupo de muestras se escriben dos bytes concretos, como si de un sello se tratase a modo de asegurar que los datos recibidos no sean corruptos o haya pérdidas. Concretamente tras el espacio exacto que requiere un grupo de muestras, se escriben a continuación los bytes \texttt{FF}.
 
-El programa \texttt{mem2file.c} se asegura que contengan este identificador en el lugar exacto en el que corresponde. En caso de no encontrarlo, el grupo de muestras es ignorado y trata de analizarse el siguiente. Sin embargo, si se encuentran estos dos bytes en el lugar específico tras cada grupo de muestras, es el propio programa el encargado de sustituir este sello por otros bytes distintos, a modo a su vez de indicador de que la muestra ha sido leída éxitosamente. Casi como si de otro sello (para confirmar la lectura) se tratase, se sustituyen los antiguos bytes por \texttt{00}.
+El programa \texttt{mem2file.c} se asegura que contengan este identificador en el lugar exacto en el que corresponde. En caso de no encontrarlo, significa que no se ha escrito esta información aun, por lo que el programa sigue en bucle de espera hasta que la información se escriba. Sin embargo, si se encuentran estos dos bytes en el lugar específico tras cada grupo de muestras, es el propio programa el encargado de sustituir este sello por otros bytes distintos, a modo a su vez de indicador de que la muestra ha sido leída éxitosamente. Casi como si de otro sello (para confirmar la lectura) se tratase, se sustituyen los antiguos bytes por \texttt{00}.
 
-Posteriormente se abre la tubería de Python (brevemente comentada en la sección \ref{cap3:sec:ecosistema}), y trata de enviarse la información por la misma en caso de haberse abierto correctamente. En la [Fig \ref{fig:mem2file}] se ilustra el proceso completo tras haberlo introducido brevemente.
+Posteriormente se abre la tubería de Python (brevemente comentada en la sección \ref{cap3:sec:ecosistema})\footnote{La capacidad máxima de esta tubería es de 4KB}, y trata de enviarse la información por la misma en caso de haberse abierto correctamente. En la [Fig \ref{fig:mem2file}] se ilustra el proceso completo tras haberlo introducido brevemente.
 
 \figura{Vectorial/mem2file}{width=1.1\textwidth}{fig:mem2file}%
 {Función principal del programa \texttt{mem2file.c} desarrollado en C}
